# my_open_spiel

./: .gitignore  actors_game_simulate.txt  command.txt  debug_run.sh  log_harvester.py  my_install_step.md  todo.txt
open_spiel/: CMakeLists.txt  spiel.cc  spiel.h
open_spiel/algorithms/: mcts.cc  mcts.h
open_spiel/algorithms/alpha_zero_torch/: CMakeLists.txt  alpha_zero.cc  alpha_zero.h  device_manager.h  model.cc  model_test.cc  vpevaluator.cc  vpevaluator.h  vpnet.cc
open_spiel/custom/: CMakeLists.txt  alpha_zero_actors.cc  alpha_zero_example.cc  alpha_zero_gomuko.cc  alpha_zero_gomuko_interactive.cc  alpha_zero_interactive.cc  alpha_zero_self_play.cc  alpha_zero_self_play_gomuko.cc  alpha_zero_vs_random.cc  dqn_tictactoe.cc  example_2.cc
open_spiel/games/: CMakeLists.txt
open_spiel/games/gomuko/: gomuko.cc  gomuko.h  gomuko_performance_check.cc  gomuko_test.cc
open_spiel/python/pytorch/: rcfr.py
open_spiel/utils/: file.cc
